# tasks

./: Makefile  README.md  custom_functions.py  process_list.py  pyproject.toml
tasks/01_2024/05/: length_of_LIS.py
tasks/01_2024/07/: count_num_ways.py
tasks/01_2024/08/: my_binary_search_tree.py
tasks/01_2024/10/: colorful_numbers.py  rotate_left.py
tasks/01_2024/11/: my_graph.py
tasks/01_2024/16/: fibonacci.py
tasks/01_2024/17/: reverse_string_recursive.py
tasks/01_2024/18/: binary_search.py  selection_sort.py
tasks/01_2024/23/: max_length.py
tasks/01_2024/29/: max_profit.py  queue_using_two_stacks.py
tasks/03_05_2023/: find_max_in_async.py  party_victory.py
tasks/04_05_2023/: add_two_numbers.py
tasks/05_05_2023/: shortest_palindrome.py
tasks/05_2023/03/: find_bbox.py  find_cheapest_flight.py  process_list.py
tasks/05_2023/04/: add_two_numbers.py  find_median.py  longest_substring.py  two_sum.py
tasks/05_2023/05/: find_first_occurrence.py  longest_palindrome.py  max_vowels.py
tasks/05_2023/06/: average_salary.py  int_to_roman.py  length_of_last_word.py  plus_one.py  roman_to_int.py
tasks/05_2023/08/: diagonal_sum.py  sort_list.py
tasks/05_2023/09/: spiral_order.py
tasks/05_2023/11/: valid_palindrome.py
tasks/05_2023/12/: compress_string.py
tasks/05_2023/15/: search_matrix.py
tasks/05_2023/16/: common_chars.py  majority_element.py
tasks/05_2023/17/: climb_stairs.py  valid_parentheses.py
tasks/05_2023/18/: merge_two_lists.py
tasks/05_2023/21/: reverse_integer.py
tasks/06_05_2023/: length_of_last_word.py  plus_one.py
(+281 files in other folders)
